write tests and function to normalize a URL

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web Crawler coded in JavaScript using Node.js. This is a JavaScript application that generates an \"internal links\" report for any website on the internet by crawling each page of the site.",
   "main": "index.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/aspiringVegetarian/javascript_web_crawler/issues"
   },
-  "homepage": "https://github.com/aspiringVegetarian/javascript_web_crawler#readme"
+  "homepage": "https://github.com/aspiringVegetarian/javascript_web_crawler#readme",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
